# virtioqxl-xf86-video-qxl

./: .gitignore  COPYING  Makefile.am  README.xspice  TODO  TODO.xspice  configure.ac
examples/: Makefile.am  spiceqxl.xorg.conf.example  virtioqxl.xorg.conf.example
scripts/: Makefile.am  Xspice  xspice
src/: Makefile.am  lookup3.c  lookup3.h  mmtest.c  mspace.c  mspace.h  murmurhash3.c  qxl.h  qxl_cursor.c  qxl_driver.c  qxl_image.c  qxl_logger.c  qxl_mem.c  qxl_mem.h  qxl_option_helpers.c  qxl_option_helpers.h  qxl_ring.c  qxl_surface.c  spiceqxl_display.c  spiceqxl_display.h  spiceqxl_driver.c  spiceqxl_driver.h  spiceqxl_inputs.c  spiceqxl_inputs.h  spiceqxl_io_port.c  spiceqxl_io_port.h  spiceqxl_main_loop.c  spiceqxl_main_loop.h  spiceqxl_spice_server.c  spiceqxl_spice_server.h
src/uxa/: uxa-accel.c  uxa-damage.c  uxa-glyphs.c  uxa-priv.h  uxa-render.c  uxa-unaccel.c  uxa.c  uxa.h
